--- a/static/css/main.less
+++ b/static/css/main.less
@@ -32,6 +32,7 @@ img {
    ========================================================================== */
 
 @import (less) "utilities.less";
+@import (less) "layout.less";
 @import (less) "media-queries.less";
 @import (less) "media-object.less";
 @import (less) "meta.less";
@@ -39,135 +40,3 @@ img {
 @import (less) "post.less";
 @import (less) "summary.less";
 @import (less) "blog-docs.less";
-
-
-.content_main,
-.content_sidebar {
-    padding: 2em (@gutter-width / 2);
-
-    .u-respond-to-min(600px, {
-        .column(12);
-    });
-}
-
-.header .demo-placeholder,
-.content_hero .demo-placeholder,
-.footer .demo-placeholder {
-    // Temporary styling to bring in line with main columns.
-    margin-left: (@gutter-width / 2);
-
-    .u-respond-to-range(600px, 800px, {
-        margin-left: @gutter-width;
-    });
-}
-
-// Set up standard content area layouts
-.u-respond-to-min(801px, {
-    .content {
-        &__1-3 {
-            .content_main {
-                .column(9);
-                .push(3);
-            }
-            .content_sidebar {
-                .column(3);
-                .pull(9);
-            }
-        }
-
-        &__2-1 {
-            .content_main {
-                .column(8);
-            }
-            .content_sidebar {
-                .column(4);
-            }
-        }
-    }
-
-    .content_main,
-    .content_sidebar {
-        padding: 2em 0;
-    } 
-});
-// END .content
-
-.content__bleedbar {
-
-    .content_sidebar {
-        padding: 2em (@gutter-width / 2);
-        background: @gray-10;
-    }
-
-    .u-respond-to-min(801px, {
-
-        // Prevent pseudo element background from creating horizontal scrollbar.
-        overflow: hidden;
-
-        .content_sidebar {
-            padding: 2em 0 2em @gutter-width;
-            margin-left: 0;
-
-            // Remove background color from actual sidebar.
-            // It will now be provided by pseudoelement :after sidebar parent.
-            background: transparent;
-
-            .lt-ie8 & {
-                // Make sure the sidebar still has a background in IE7.
-                padding-right: @gutter-width;
-                background: @gray-10;
-            }
-        }
-
-        .content_wrapper:after {
-            // Create faux sidebar background.
-            content: '';
-            display: block;
-            width: 9999px;
-            border-left: 1px solid @gray-50;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            z-index: -1;
-            // The three in the below calculation is a magic number.
-            // Not entirely sure what to do about it right now.
-            margin-left: (@gutter-width / 3);
-            background: @gray-10;
-        }
-
-        &.content__2-1 .content_wrapper:after {
-            left: 66.666666667%;    
-        }
-        &.content__3-1 .content_wrapper:after {
-            left: 75%;
-        }
-
-    });
-} // end .bleedbar
-
-
-// STUFF THAT SHOULD PROBABLY MOVE TO CF-LAYOUT
-
-.wrapper {
-    .u-respond-to-min(801px, {
-        .wrapper();
-    });
-}
-.header {
-    border-bottom: 10px solid @green;
-}
-.content_hero {
-    padding: 1em 0;
-    background: @gray-20;
-
-    > h1 {
-        margin: 0;
-    }
-}
-
-.footer {
-    padding: 1.5em 0;
-    border-top: 3px solid @green;
-    background: @gray-10;
-}
-
