--- a/static/css/post.less
+++ b/static/css/post.less
@@ -368,6 +368,8 @@
 
 .post_inset {
     margin: unit(30px / @base-font-size-px, em) 0;
+    color: @black;
+
     .u-respond-to-min(769px, {
         .u-right();
         width: unit(250px / @base-font-size-px, em);
