Fixes tags when they stack.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3809,8 +3809,14 @@ img {
   tags:
     - cfgov-meta
 */
+.tags {
+  position: relative;
+  padding-left: 4.125em;
+}
 .tags_header {
-  float: left;
+  position: absolute;
+  left: 0;
+  width: 3.22222222em;
   margin-top: 0;
   margin-bottom: 0.27777778em;
   font-size: 1.125em;
@@ -3823,6 +3829,9 @@ img {
 .lt-ie9 .tags_header {
   font-weight: normal !important;
 }
+.tags_list {
+  padding: 0;
+}
 .tags_tag {
   display: inline-block;
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
@@ -3834,7 +3843,7 @@ img {
   margin-bottom: 0.41666667em;
   font-size: 0.75em;
   line-height: 1.83333333;
-  margin-left: 1.16666667em;
+  margin-right: 1.16666667em;
 }
 .lt-ie8 .tags_tag {
   display: inline;
