Updates tags header in docs.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3800,7 +3800,7 @@ img {
     - name: Default example
       markup: |
         <div class="tags">
-            <h4 class="tags_header">Tags:</h4>
+            <h4 class="tags_header">Topics:</h4>
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
