--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -11,7 +11,7 @@
     - name: Default example
       markup: |
         <div class="tags">
-            <h4 class="tags_header">Tags:</h4>
+            <h4 class="tags_header">Topics:</h4>
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
