Tag margins updated.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4310,6 +4310,36 @@ img {
                         College loans
                     </a>
                 </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        College loans
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        College loans
+                    </a>
+                </li>
             </ul>
         </div> 
   tags:
@@ -4362,6 +4392,7 @@ img {
 .tags_tag {
   display: inline-block;
   margin-right: 0.9375em;
+  margin-bottom: 0.5em;
   border-bottom: none;
 }
 
