--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -28,6 +28,36 @@
                         College loans
                     </a>
                 </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        College loans
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Students
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        Consumers
+                    </a>
+                </li>
+                <li class="tags_tag">
+                    <a href="#" class="tags_link">
+                        College loans
+                    </a>
+                </li>
             </ul>
         </div> 
   tags:
@@ -74,6 +104,8 @@
         .u-respond-to-min(@bp, {
             .u-inline-block();
             margin-right: unit(15px / @base-font-size-px, em);
+            // Eyeballed to be 15px of vertical space between each.
+            margin-bottom: unit(8px / @base-font-size-px, em);
             border-bottom: none;
         });
     }
