--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -176,10 +176,13 @@
       markup: |
         <a href="#" class="category-slug">
             <span class="cf-icon cf-icon-credit-card"></span>
+            <span class="visually-hidden">Category:</span>
             Consumer finance
         </a>
       notes:
         - "Always use a link element or else you will get unwanted hover styles."
+        - "We suggest using a .visually-hidden element to add more context for
+          screen readers."
   tags:
     - cfgov-meta
 */
