--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -12,18 +12,22 @@
       markup: |
         <a href="#" class="category-slug">
             <span class="cf-icon cf-icon-help"></span>
+            <span class="visually-hidden">Category:</span>
             Announcements & updates
         </a><br>
         <a href="#" class="category-slug">
             <span class="cf-icon cf-icon-help"></span>
+            <span class="visually-hidden">Category:</span>
             Consumer information
         </a><br>
         <a href="#" class="category-slug">
             <span class="cf-icon cf-icon-help"></span>
+            <span class="visually-hidden">Category:</span>
             Engagement
         </a><br>
         <a href="#" class="category-slug">
             <span class="cf-icon cf-icon-help"></span>
+            <span class="visually-hidden">Category:</span>
             Innovation & data
         </a>
       notes:
