--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3514,10 +3514,9 @@ ul,
 ol,
 dl,
 table,
-blockquote,
 figure {
   margin-top: 0;
-  margin-bottom: 0.75em;
+  margin-bottom: 1.25em;
 }
 
 /* topdoc
@@ -3700,8 +3699,11 @@ ul {
 */
 
 blockquote {
-  margin-top: 2.5em;
-  margin-bottom: 2.5em;
+  margin: 1.25em;
+}
+
+blockquote {
+  margin: 1.75em 2.5em;
 }
 
 /* topdoc
