--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4942,6 +4942,7 @@ img {
   margin-bottom: 0.22727273em;
   font-size: 1.375em;
   line-height: 1.27272727;
+  margin-bottom: 0.45454545em;
 }
 a:hover .summary_header,
 a.hover .summary_header,
@@ -4978,6 +4979,7 @@ a.focus .summary_header {
     margin-bottom: 0.30769231em;
     font-size: 1.625em;
     line-height: 1.26923077;
+    margin-bottom: 0.34615385em;
   }
   .summary_header em,
   .summary_header i {
@@ -5001,6 +5003,7 @@ a.focus .summary_header {
   }
 }
 .summary_text {
+  margin-bottom: 0.625em;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
