--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5504,6 +5504,7 @@ img {
   margin-bottom: 0.22727273em;
   font-size: 1.375em;
   line-height: 1.27272727;
+  margin-bottom: 0.45454545em;
 }
 
 a:hover .summary_header,
@@ -5545,6 +5546,7 @@ a.focus .summary_header {
   margin-bottom: 0.30769231em;
   font-size: 1.625em;
   line-height: 1.26923077;
+  margin-bottom: 0.34615385em;
 }
 
 .summary_header em,
@@ -5572,6 +5574,7 @@ a.focus .summary_header {
 }
 
 .summary_text {
+  margin-bottom: 0.625em;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
