--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -37,12 +37,18 @@
         color: @black;
         .u-link-child__hover(@pacific-80);
         .h3();
+        // Eyeballed to 20px from the baseline.
+        margin-bottom: unit(10px / @font-size, em);
         .u-respond-to-min(600px, {
             .h2();
+            // Eyeballed to 20px from the baseline.
+            margin-bottom: unit(9px / @font-size, em);
         });
     }
 
     &_text {
+        // Eyeballed to 20px from the baseline.
+        margin-bottom: unit(10px / @base-font-size-px, em);
         .webfont-regular();
         color: @darkgray;
     }
