Margin tweaks after cf-typography update.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4022,6 +4022,8 @@ img {
   font-style: normal;
   font-weight: 500;
   line-height: 1.22222222;
+  display: block;
+  margin-bottom: 0.55555556em;
   color: #101820;
   border-bottom-color: #0072ce;
 }
@@ -4047,6 +4049,11 @@ img {
 .category-slug.active {
   border-bottom-color: #002d72;
   color: #101820;
+}
+@media only all and (min-width: 37.5em) {
+  .category-slug {
+    margin-bottom: 0.22222222em;
+  }
 }
 /* topdoc
   name: Header slug
@@ -4779,6 +4786,7 @@ img {
   margin-bottom: 0.30769231em;
   font-size: 1.625em;
   line-height: 1.26923077;
+  margin-bottom: 0.84615385em;
 }
 .post_header em,
 .post_header i {
@@ -4809,6 +4817,7 @@ img {
     margin-bottom: 0.47058824em;
     font-size: 2.125em;
     line-height: 1.29411765;
+    margin-bottom: 0.52941176em;
   }
   .post_header em,
   .post_header i {
