--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -189,7 +189,13 @@
 
 .category-slug {
     .h4();
+    display: block;
+    margin-bottom: unit(10px / @font-size, em);
     .u-link__colors(@black, @pacific-80);
+
+    .u-respond-to-min(600px, {
+        margin-bottom: unit(4px / @font-size, em);
+    });
 }
 
 
