--- a/static/css/post.less
+++ b/static/css/post.less
@@ -337,8 +337,10 @@
 
 .post_header {
     .h2();
+    margin-bottom: unit(22px / @font-size, em);
     .u-respond-to-min(600px, {
         .h1();
+        margin-bottom: unit(18px / @font-size, em);
     });
 }
 
