rm self-closing syntax; change icon from i to span

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,7 +26,7 @@
     <meta name="description" content="Blog landing page prototyping for the consumerfinance.gov refresh">
 
     <!-- Explicit favicon link needed for testing. Remove for production. -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 <!--
     ======
@@ -66,7 +66,7 @@
     <div class="demo-banner">
         cfgov-refresh demo: <b>{% block demo_title %}MISSING DEMO TITLE{% endblock demo_title %}</b>
         <a class="demo-banner_back-link" href="../index.html">
-            <i class="cf-icon cf-icon-left"></i> Back to demo home
+            <span class="cf-icon cf-icon-left"></span> Back to demo home
         </a>
     </div>
 
