--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2649,14 +2649,14 @@ textarea {
     - name: Default pagination
       markup: |
         <nav class="pagination">
-            <a class="btn pagination_prev" href="#"><i class="btn-icon-left icon-chevron-left"></i> Previous</a>
+            <a class="btn pagination_prev" href="#"><span class="btn-icon-left cf-icon cf-icon-left"></span> Previous</a>
             <form class="pagination_form">
                 <label class="pagination_label" for="pagination_current-page">Page</label>
                 <input class="pagination_current-page" id="pagination_current-page" name="pagination_current-page" type="number" min="1" max="149" value="149" />
                 <label class="pagination_label" for="pagination_current-page">of 149</label>
                 <button class="btn btn-link pagination_submit" id="pagination_submit" type="submit">Go</button>
             </form>
-            <a class="btn pagination_next" href="#">Next <i class="btn-icon-right icon-chevron-right"></i></a>
+            <a class="btn pagination_next" href="#">Next <span class="btn-icon-right cf-icon cf-icon-right"></span></a>
         </nav>
     tags:
     - fj-buttons
@@ -2711,7 +2711,7 @@ textarea {
 .lt-ie9 .pagination_form b {
   font-weight: normal !important;
 }
-.pagination_current-page {
+input[type="number"].pagination_current-page {
   display: inline-block;
   vertical-align: middle;
   /* We need enough room for three digits and the number spinners for type="number" inputs */
@@ -2726,7 +2726,7 @@ textarea {
   font-weight: bold;
   text-align: right;
 }
-.lt-ie9 .pagination_current-page {
+.lt-ie9 input[type="number"].pagination_current-page {
   font-weight: normal !important;
 }
 .pagination_submit.btn {
@@ -2734,7 +2734,7 @@ textarea {
   vertical-align: middle;
   margin: 0 0 0 1em;
 }
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 30em) {
   .pagination_form {
     border-radius: 0.28571429em;
   }
