Updates post preview margin.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -116,8 +116,8 @@
     - cfgov-blog-docs
 */
 
-.post-preview + .post-preview {
-    margin-top: 50px;
+.post-preview {
+    margin-bottom: 50px;
 }
 
 
