--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6003,8 +6003,8 @@ a.focus .summary_header {
     - cfgov-blog-docs
 */
 
-.post-preview + .post-preview {
-  margin-top: 50px;
+.post-preview {
+  margin-bottom: 50px;
 }
 
 /* topdoc
