--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6003,8 +6003,12 @@ a.focus .summary_header {
     - cfgov-blog-docs
 */
 
-.post-preview {
-  margin-bottom: 50px;
+.post-preview + .post-preview {
+  margin-bottom: 3.125em;
+}
+
+.post-pagination {
+  margin: 3.375em 0 1.75em;
 }
 
 /* topdoc
