--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -116,8 +116,14 @@
     - cfgov-blog-docs
 */
 
-.post-preview {
-    margin-bottom: 50px;
+.post-preview + .post-preview {
+    // Eyeballed to 60px
+    margin-bottom: unit(50px / @base-font-size-px, em);
+}
+
+.post-pagination {
+    // Eyeballed to 60px
+    margin: unit(54px / @base-font-size-px, em) 0 unit(28px / @base-font-size-px, em);
 }
 
 
