--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5378,8 +5378,11 @@ a.focus .summary_header {
   tags:
     - cfgov-blog-docs
 */
-.post-preview {
-  margin-bottom: 50px;
+.post-preview + .post-preview {
+  margin-bottom: 3.125em;
+}
+.post-pagination {
+  margin: 3.375em 0 1.75em;
 }
 /* topdoc
   name: EOF
