--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -118,7 +118,7 @@
 
 .post-preview + .post-preview {
     // Eyeballed to 60px
-    margin-bottom: unit(50px / @base-font-size-px, em);
+    margin-top: unit(50px / @base-font-size-px, em);
 }
 
 .post-pagination {
