--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5379,7 +5379,7 @@ a.focus .summary_header {
     - cfgov-blog-docs
 */
 .post-preview + .post-preview {
-  margin-bottom: 3.125em;
+  margin-top: 3.125em;
 }
 .post-pagination {
   margin: 3.375em 0 1.75em;
