--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5098,7 +5098,7 @@ img {
   color: #101820;
 }
 @media only all and (min-width: 48.0625em) {
-  .post_inset {
+  .post_inset__right {
     float: right;
     width: 15.625em;
     margin-top: 0.3125em;
